--- a/header.css
+++ b/header.css
@@ -9,10 +9,12 @@ a {
 
 h1 {
   font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
   font-size: 21px;
   line-height: 28px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-decoration: none;
 }
